# llm-git

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/configs/: README.md  anthropic.toml  litellm.toml  openai.toml  openrouter.toml
lgit/: __init__.py  __main__.py  analysis.py  api.py  cache.py  changelog.py  cli.py  compose.py  config.py  diffing.py  errors.py  git.py  map_reduce.py  markdown_output.py  models.py  normalization.py  patch.py  pricing.py  profile.py  repo.py  rewrite.py  style.py  templates.py  tokens.py  validation.py
lgit/resources/: __init__.py  commit_types.json  model_pricing.json
lgit/testing/: __init__.py  compare.py  fixture.py  report.py  runner.py
prompts/analysis/: default.md
prompts/changelog/: default.md  markdown.md
prompts/compose-bind/: markdown.md
prompts/compose-intent/: default.md  (+1 more)
scripts/: release.sh
src/: analysis.rs  api.rs  changelog.rs  compose.rs  compose_types.rs  config.rs  diff.rs  error.rs  git.rs  lib.rs  llm_cache.rs  main.rs  map_reduce.rs  markdown_output.rs  normalization.rs  patch.rs  profile.rs  repo.rs  rewrite.rs  style.rs  templates.rs  tokens.rs  types.rs  validation.rs  validation_data.json
tests/: conftest.py  test_analysis.py  test_api.py  test_cache.py  test_changelog.py  test_changelog_gate.py  test_cli.py  test_cli_git_behaviour.py  test_compare.py  test_compose.py  test_config.py  test_diffing.py  test_git.py  test_map_reduce.py  test_markdown_output.py  test_models_config_normalization.py  test_normalization.py  test_parity_features.py  test_patch.py  test_pricing.py  test_repo.py  test_templates.py  test_testing_fixtures.py  test_types.py  test_validation.py
(+544 files in other folders)
